Final update: Added responsiveness and updated README

--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amazon</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>Amazon Clone</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -29,40 +23,32 @@
         <div class="nav-search">
           <select class="search-selecter">
             <option>All</option>
-            <option>Electornics</option>
+            <option>Electronics</option>
             <option>Fashion</option>
             <option>Home & kitchen</option>
           </select>
-          <input
-            type="search"
-            class="search-input"
-            placeholder="Search Amazon"
-          />
+          <input type="search" class="search-input" placeholder="Search Amazon" />
           <div class="search-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
         </div>
         <div class="language border">
-          <i class="fa-solid fa-flag-checkered"></i>
+          <i class="fa-solid fa-globe"></i>
           <select class="contry">
             <option>EN</option>
             <option>IN</option>
-            <option>US</option>
-            <option>JP</option>
           </select>
         </div>
         <div class="account border">
           <p class="para-first"><span>Hello, Sign in </span></p>
-          <!-- <p><span>Account & Lists</span></p> -->
           <select class="account-selector">
             <option>Account & Lists</option>
-            <option>Order</option>
-            <option>History</option>
+            <option>Orders</option>
           </select>
         </div>
         <div class="order border">
           <p class="para-first">Returns</p>
-          <p>& Order</p>
+          <p>& Orders</p>
         </div>
         <div class="cart border">
           <i style="font-size: 30px" class="fa-solid fa-cart-shopping"></i>
@@ -71,203 +57,83 @@
       </div>
       <div class="pannel">
         <div class="pannel-all border">
-          <i class="fa-solid fa-bars"></i>
-          All
+          <i class="fa-solid fa-bars"></i> All
         </div>
         <div class="anchor-tag">
           <p class="border">Today's Deals</p>
           <p class="border">Prime Video</p>
           <p class="border">Registry</p>
           <p class="border">Gift Cards</p>
-          <p class="border">Customer Service</p>
           <p class="border">Sell</p>
         </div>
-        <div class="pannel-deal border">Shop Deals in Electornics</div>
+        <div class="pannel-deal border">Shop Deals in Electronics</div>
       </div>
     </header>
+
     <div class="hero-section">
       <div class="hero-div">
         <p>
-          You are on amazon.com. You can also shop on Amazon India for millions
-          of products with fast local delivery.
+          You are on amazon.com. You can also shop on Amazon India. 
           <a href="#">Click here to go to amazon.in</a>
         </p>
       </div>
     </div>
+
     <div class="shoping-box">
-      <!-- box 1 -->
       <div class="box">
         <div class="box1-content">
-          <h2>Electornics & Gadegts</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box1.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
+          <h2>Electronics</h2>
+          <div class="box-image" style="background-image: url('box1.jpg')"></div>
+          <p style="color: #007185; cursor: pointer;">See more</p>
         </div>
       </div>
-      <!-- box 2 -->
+      <div class="box">
+        <div class="box1-content">
+          <h2>Books</h2>
+          <div class="box-image" style="background-image: url('box2.jpg')"></div>
+          <p style="color: #007185; cursor: pointer;">See more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box1-content">
+          <h2>Fitness</h2>
+          <div class="box-image" style="background-image: url('box3.jpg')"></div>
+          <p style="color: #007185; cursor: pointer;">See more</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box1-content">
+          <h2>Gadgets</h2>
+          <div class="box-image" style="background-image: url('box4.jpg')"></div>
+          <p style="color: #007185; cursor: pointer;">See more</p>
+        </div>
+      </div>
+      </div>
 
-      <div class="box">
-        <div class="box1-content">
-          <h2>Books & Novels</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box2.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-      <!-- box 3 -->
-
-      <div class="box">
-        <div class="box1-content">
-          <h2>Health & fitness</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box3.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-      <!-- box 4 -->
-
-      <div class="box">
-        <div class="box1-content">
-          <h2>Electornics & Gadegts</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box4.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-      <!-- box 5 -->
-
-      <div class="box">
-        <div class="box1-content">
-          <h2>Electornics & Gadegts</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box5.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-      <!-- box 6 -->
-
-      <div class="box">
-        <div class="box1-content">
-          <h2>Books & Novels</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box6.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-      <!-- box 7 -->
-
-      <div class="box">
-        <div class="box1-content">
-          <h2>Health & fitness</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box7.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-      <!-- box 8 -->
-
-      <div class="box">
-        <div class="box1-content">
-          <h2>Electornics & Gadegts</h2>
-          <div
-            class="box-image"
-            style="background-image: url('box8.jpg')"
-          ></div>
-          <p style="color: rgb(29, 29, 229)">See more</p>
-        </div>
-      </div>
-    </div>
     <footer>
       <div class="foot-one">Back to top</div>
       <div class="foot-two">
         <ul>
-          <p>Make Money with Us</p>
-          <a>Sell products on Amazon</a>
-          <a>Sell on Amazon Business</a>
-          <a>Sell apps on Amazon</a>
-          <a>Become an Affiliate</a>
-          <a>Advertise Your Products</a>
-          <a>Self-Publish with Us</a>
-          <a>Host an Amazon Hub</a>
+          <p>Get to Know Us</p>
+          <a>Careers</a>
+          <a>Blog</a>
+          <a>About Amazon</a>
         </ul>
-
         <ul>
           <p>Make Money with Us</p>
-          <a>Sell products on Amazon</a>
-          <a>Sell on Amazon Business</a>
-          <a>Sell apps on Amazon</a>
+          <a>Sell on Amazon</a>
           <a>Become an Affiliate</a>
-          <a>Advertise Your Products</a>
-          <a>Self-Publish with Us</a>
-          <a>Host an Amazon Hub</a>
-        </ul>
-
-        <ul>
-          <p>Make Money with Us</p>
-          <a>Sell products on Amazon</a>
-          <a>Sell on Amazon Business</a>
-          <a>Sell apps on Amazon</a>
-          <a>Become an Affiliate</a>
-          <a>Advertise Your Products</a>
-          <a>Self-Publish with Us</a>
-          <a>Host an Amazon Hub</a>
-        </ul>
-
-        <ul>
-          <p>Make Money with Us</p>
-          <a>Sell products on Amazon</a>
-          <a>Sell on Amazon Business</a>
-          <a>Sell apps on Amazon</a>
-          <a>Become an Affiliate</a>
-          <a>Advertise Your Products</a>
-          <a>Self-Publish with Us</a>
-          <a>Host an Amazon Hub</a>
         </ul>
       </div>
-
       <div class="foot-three">
         <div class="logo-footer"></div>
-        <div class="element">
-          <div class="divborder">
-            <i class="fa-solid fa-language"></i>
-            English
-          </div>
-          <div class="divborder">
-            <i class="fa-solid fa-indian-rupee-sign"></i>
-            Indian - Rs
-          </div>
-          <div class="divborder">
-            <i class="fa-solid fa-globe"></i>
-            India
-          </div>
-        </div>
       </div>
-
       <div class="foot-four">
         <div class="pages">
           <a>Conditions of Use</a>
           <a>Privacy Notice</a>
-          <a>Consumer Health Data Privacy Disclosure</a>
-          <a>Your Ads Privacy Choices</a>
         </div>
-        <div class="copy-right">
-          © 1996-2025, Amazon.com, Inc. or its affiliates
-        </div>
+        <div class="copy-right">© 1996-2025, Amazon Clone Project</div>
       </div>
     </footer>
   </body>
-</html>
